[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Tilemaps/images/monochrome_tilemap_transparent_325.png" type="Texture" id=1]
[ext_resource path="res://scripts/ground_enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Sound Effects/splat2ogg-14668.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/Tilemaps/images/monochrome_tilemap_transparent_326.png" type="Texture" id=4]
[ext_resource path="res://assets/Tilemaps/images/monochrome_tilemap_transparent_324.png" type="Texture" id=5]
[ext_resource path="res://assets/Tilemaps/images/monochrome_tilemap_transparent_327.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Dead",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.5, 3.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.5, 1.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.5, 3 )

[node name="Ground Enemy" type="KinematicBody2D"]
collision_mask = 17
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Run"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 6 )

[node name="Floor_Checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 14 )

[node name="Top_Checker" type="Area2D" parent="."]
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Checker"]
position = Vector2( -0.5, -2 )
shape = SubResource( 7 )

[node name="Side_Checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Side_Checker"]
position = Vector2( -0.5, 3 )
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Death_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Top_Checker" to="." method="_on_Top_Checker_body_entered"]
[connection signal="body_entered" from="Side_Checker" to="." method="_on_Side_Checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
